--- a/.github/workflows/Dev-build.yml
+++ b/.github/workflows/Dev-build.yml
@@ -1,5 +1,4 @@
-name: Build, Package and Release ASP.Net Core app
-
+name: Development Env - Build, Package and Release ASP.Net Core app
 env:
   AZURE_WEBAPP_NAME: demo-app-services    # set this to the name of your Azure Web App
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
@@ -9,17 +8,15 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
       - Dev
 
   pull_request:
     branches:
-      - main
       - Dev
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -47,15 +44,15 @@ jobs:
  # Deploy to Azure Web apps
  
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build
     
     steps:
-      #- name: Download artifact
-       # uses: actions/download-artifact@v3
-       # with:
-        #  name: mydotnet-app
-        #  path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: mydotnet-app
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp
         
       - name: 'Run Azure webapp deploy action using publish profile credentials'
         uses: azure/webapps-deploy@v2
@@ -65,29 +62,27 @@ jobs:
           package: '${{env.AZURE_WEBAPP_PACKAGE_PATH}}/myapp'
 
   release:
-    runs-on: self-hosted
-    needs: [build, deploy]
+    runs-on: ubuntu-latest
+    needs: build
     
     steps:
-      #- name: Download artifact
-        #uses: actions/download-artifact@v3
-        #with:
-          #name: mydotnet-app
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: mydotnet-app
           #path: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}/mydotnet-app
         
-      #- name: Display structure of downloaded files
-        #run: ls -R
+      - name: Display structure of downloaded files
+        run: ls -R
       
-      #- name: Zip all the downloaded files
-        #uses: thedoctor0/zip-release@main
-        #with:
-          #type: 'zip'
-          #filename: 'mydotnet-app-latest.zip'
-          #directory: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}/mydotnet-app
-          #path: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}/mydotnet-app
+      - name: Zip all the downloaded files
+        uses: thedoctor0/zip-release@main
+        with:
+          type: 'zip'
+          filename: 'mydotnet-app-latest.zip'
           
-      - name: Performing folder zip action 
-        run: zip -r mydotnet-app.zip ${{env.AZURE_WEBAPP_PACKAGE_PATH}}/myapp
+      #- name: Performing folder zip action 
+        #run: zip -r mydotnet-app.zip ${{env.AZURE_WEBAPP_PACKAGE_PATH}}/myapp
         
       - name: Create Release
         id: create-release
@@ -97,6 +92,8 @@ jobs:
         with:
           tag_name: v${{ github.run_number }}
           release_name: Release v${{ github.run_number }}
+          target_commitish: Dev
+          prerelease: true
             
       - name: Uplod asset to GitHub Release
         id: upload-release
@@ -105,6 +102,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
          upload_url: ${{ steps.create-release.outputs.upload_url }}
-         asset_path: ./mydotnet-app.zip
+         asset_path: ./mydotnet-app-latest.zip
          asset_name: mydotnet-app-v${{ github.run_number }}.zip
          asset_content_type: application/zip
