commented the events to not accidentally run GH WF

--- a/.github/workflows/Dev-build.yml
+++ b/.github/workflows/Dev-build.yml
@@ -8,11 +8,11 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - Dev
+      #- Dev
 
   pull_request:
     branches:
-      - Dev
+      #- Dev
 
 jobs:
   build:
