--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -35,7 +35,7 @@ jobs:
       # Triggering SonarQUbe analysis
       
       - name: SonarQube scan
-        uses: sonarsource/sonarqube-scan-action@v1.3
+        uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
@@ -43,7 +43,7 @@ jobs:
       # SonarQube Quality Gate check  
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
-        uses: sonarsource/sonarqube-quality-gate-action@v1.3
+        uses: sonarsource/sonarqube-quality-gate-action@master
         timeout-minutes: 2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
