--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,11 +8,11 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - Dev
+      - main
 
   pull_request:
     branches:
-      - Dev
+      - main
 
 jobs:
   build:
