--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -65,44 +65,44 @@ jobs:
           
  # Deploy to Azure Web apps
  
- # deploy:
- #   runs-on: self-hosted
- #   needs: build
+  deploy:
+    runs-on: self-hosted
+    needs: build
     
- #   steps:        
- #     - name: 'Run Azure webapp deploy action using publish profile credentials'
- #       uses: azure/webapps-deploy@v2
- #       with: 
- #         app-name: ${{ env.AZURE_WEBAPP_NAME }}
- #         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }} # Define secret variable in repository settings as per action documentation
- #         package: '${{env.AZURE_WEBAPP_PACKAGE_PATH}}/myapp'
+    steps:        
+      - name: 'Run Azure webapp deploy action using publish profile credentials'
+        uses: azure/webapps-deploy@v2
+        with: 
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }} # Define secret variable in repository settings as per action documentation
+          package: '${{env.AZURE_WEBAPP_PACKAGE_PATH}}/myapp'
 
- # release:
- #   runs-on: self-hosted
- #   needs: build
+  release:
+    runs-on: self-hosted
+    needs: build
     
- #   steps:          
- #     - name: Zip the package
- #       run: zip -r mydotnet-app-v${{ github.run_number }}.zip ${{env.AZURE_WEBAPP_PACKAGE_PATH}}/myapp
+    steps:          
+      - name: Zip the package
+        run: zip -r mydotnet-app-v${{ github.run_number }}.zip ${{env.AZURE_WEBAPP_PACKAGE_PATH}}/myapp
         
- #     - name: Create Release
- #       id: create-release
- #       uses: actions/create-release@v1
- #       env:
- #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
- #       with:
- #         tag_name: v${{ github.run_number }}
- #         release_name: Release v${{ github.run_number }}
+      - name: Create Release
+        id: create-release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: v${{ github.run_number }}
+          release_name: Release v${{ github.run_number }}
           #target_commitish: Dev
- #         prerelease: true
+          prerelease: true
             
- #     - name: Uplod asset to GitHub Release
- #       id: upload-release
- #       uses: actions/upload-release-asset@v1
- #       env:
- #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
- #       with:
- #        upload_url: ${{ steps.create-release.outputs.upload_url }}
- #        asset_path: ./mydotnet-app-v${{ github.run_number }}.zip
- #        asset_name: mydotnet-app-v${{ github.run_number }}.zip
- #        asset_content_type: application/zip
+      - name: Uplod asset to GitHub Release
+        id: upload-release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+         upload_url: ${{ steps.create-release.outputs.upload_url }}
+         asset_path: ./mydotnet-app-v${{ github.run_number }}.zip
+         asset_name: mydotnet-app-v${{ github.run_number }}.zip
+         asset_content_type: application/zip
